--- a/index.org
+++ b/index.org
@@ -3,15 +3,16 @@
 #+AUTHOR: John Hilliard
 #+EMAIL: jhilliard@nextjump.com
 #+CREATOR: John Hilliard
-#+DESCRIPTION:
+#+DESCRIPTION: The website of John Hilliard
+#+HTML_DOCTYPE: html5
+#+KEYWORDS: blog, software, programming
+#+SUBTITLE: Programmer
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="css/sakura-dark.css" />
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="css/mine.css" />
-
+#+HTML_HEAD: <meta property="og:title" content="John Hilliard Blog" />
+#+HTML_HEAD: <meta property="og:description" content="This is my website. There are many like it, but this one is mine" />
+#+HTML_HEAD: <meta property="og:image" content="img/ascii-john.jpg" />
 #+OPTIONS: toc:nil
-#+LATEX_HEADER: \usepackage{geometry}
-#+LATEX_HEADER: \usepackage{lmodern}
-#+LATEX_HEADER: \geometry{left=1in,right=1in,top=1in,bottom=1in}
-#+LaTeX_CLASS_OPTIONS: [letterpaper]
 
 This is my home page... there are many like it, but this one is mine.
 
