--- a/index.org
+++ b/index.org
@@ -17,5 +17,6 @@
 I'm John. This is my website. Welcome to it.
 
 Writing:
+- Creating ASCII Art from a video [[./posts/2019-02-23-ascii-face.org]]
 - Notes from my trip to #OReillySAConf [[./posts/2019-orielly-sa-conf.org]]
 
