--- a/posts/2019-02-23-ascii-face.org
+++ b/posts/2019-02-23-ascii-face.org
@@ -49,7 +49,7 @@ The basic approach was to hide all but one of the ~pre~ tags. Then
 there is a timer that's Running regularly to change with ~pre~ tag is
 showing.
 
-You can see the final html document [[asci-face.hml]].
+You can see the final html document [[ascii-face.hml]].
 
 *Step 6*: The last step here was to creae a real gif. Since I don't
  know how to conver animaed plain text into a gif, I just too a screen
