--- a/posts/2019-02-23-ascii-face.org
+++ b/posts/2019-02-23-ascii-face.org
@@ -41,15 +41,16 @@ find . -type f | sort | xargs -I xxx jp2a --width=200 xxx --output=xxx.txt
 
 *Step 5*: The last step here was to animate the frames.
 
-#+BEGIN_EXPORT html
+#+BEGIN_HTML
 <script src="https://gist.github.com/praetoriansentry/297152a91354aded5cd0f81ea512a821.js"></script>
-#+END_EXPORT
+#+END_HTML
+
 
 The basic approach was to hide all but one of the ~pre~ tags. Then
 there is a timer that's Running regularly to change with ~pre~ tag is
 showing.
 
-You can see the final html document [[ascii-face.hml]].
+You can see the final html document [[./hascii-face.html]].
 
 *Step 6*: The last step here was to creae a real gif. Since I don't
  know how to conver animaed plain text into a gif, I just too a screen
