--- a/index.org
+++ b/index.org
@@ -17,6 +17,7 @@
 I'm John. This is my website. Welcome to it.
 
 Writing:
+- Creating a Simple Go Lambda Function to Save Data to S3 [[./posts/2019-03-31-lambda-to-s3-golang.org]]
 - JavaScript Quine With Self Referential CRC32 [[./posts/2019-03-04-js-quine.org]]
 - Writing a Quine in Bash [[./posts/2019-02-29-quine.org]]
 - Creating ASCII Art from a video [[./posts/2019-02-23-ascii-face.org]]
