--- a/posts/2019-04-14-release-it-notes.org
+++ b/posts/2019-04-14-release-it-notes.org
@@ -15,7 +15,7 @@
 #+HTML_HEAD: <meta property="og:site_name" content="John Hilliard's Blog" />
 #+HTML_HEAD: <meta property="og:description" content="How to emulate the 26-bit HID FC and Card Number using a standard T5577 card." />
 #+HTML_HEAD: <meta property="og:image" content="https://john.dev/img/t5577.png" />
-#+OPTIONS: toc:nil
+#+OPTIONS: toc:nil, ^:nil
 
 Last month during the Next Jump engineering book club, we read [[https://www.worldcat.org/title/release-it-design-and-deploy-production-ready-software/oclc/1028052156][Release
 It]] by Michael Nygard. The book was jam packed with very useful
@@ -683,11 +683,70 @@ we're failing to meet SLA.
 
 *** Remember This
 
+/You can't out-scale the world./ No matter how large your
+infrastructure or how fast you can scale it, the world has more people
+and devices than you can support. If your service is exposed to
+uncontrolled demand, then you need to be able to shed load when the
+world goes crazy on you.
+
+/Avoid slow responses using Shed Load./ Creating slow responses is
+being a bad citizen. Keep your response times under control rather
+than getting so slow that callers time out.
+
+/Use load balancers as shock absorbers./ Individual instances can
+report HTTP 503 to get some breathing room. Load balancers are good at
+recycling connections very quickly.
 
 ** Create Back Pressure
+
+With unbounded queues, we can run into issues because as the queue
+fills, response time increases. One way to help combat this is to use
+bounded queues when handling transactions. If the queue is bounded, we
+have to decide what to do with requests once the queue has filled and
+those are options are what will create back pressure.
+
+- Pretend to accept the new item but actually drop it on the floor.
+- Actually accept the new item and drop something else from the queue
+  on the floor.
+- Refuse the item.
+- Block the producer until there is room in the queue.
+
 *** Remember This
+
+/Back Pressure creates safety by slowing down consumers./ Consumers
+will experience slowdowns. The only alternative is to let them crash
+the provider.
+
+/Apply Back Pressure with a system boundary./ Across boundaries, look
+at load shedding instead. This is especially true when the Internet at
+large is your user base.
+
+/Queues must be finite for response times to be finite./ You only have
+a few options when a queue is full. All of them are unpleasant: drop
+data, refuse work, or block. Consumers must be careful not to block
+forever.
+
 ** Governor
+
+The idea behind the governor is to slow automations down enough for
+humans to get involved and prevent catastrophe.
+
 *** Remember This
+
+/Slow things down to allow intervention./ When things are about to go
+off the rails, we often find automation tools pushing the throttle to
+its limit. Humans are better at situational thinking, so we need to
+create opportunities for us to intervene.
+
+/Apply resistance in the unsafe direction./ Some actions are
+inherently unsafe. Shutting down, deleting, blocking things...these
+are all likely to interrupt service. Automation will make them go
+fast, so you should apply Governor to provide humans with time to
+intervene.
+
+/Consider a response curve./ Actions may be safe within a defined
+range. Outside that range they should encounter increasing resistance
+by slowing down the rate by which they can occur.
 
 * Themes
 
@@ -707,6 +766,9 @@ we're failing to meet SLA.
 - "Unbalanced capacities are another problem rarely observed during
   QA"
 - Stability Patterns will not help your product pass QA
+- "Undeployed code is unfinished inventory. It has unknown bugs. It
+  may break scaling or cause production downtime"
+
 
 ** Clutter
 
@@ -716,8 +778,31 @@ necessary when the target is making for "production" rather than QA.
 ** Learning
 
 - Deploying to production begins the "learning process" much faster
+- In the beginning of a project, we're most ignorant, but that's when
+  we have to make some of the most important decisions. The idea
+  reminds me of Dunning Krueger effect
 
-* Thoughts
+** Networking
+
+A lot of the content in the book makes me think that there's a lot of
+power in developers being aware of network design and networking in
+general. E.g. a service that listens on port 8080 could more
+sophisticated if it listens on port 8080 for a specific adapter. In
+that case, we could handle different adapters differently and there
+could be different access and permissions for different
+adapters. E.g. The control plane could respond specifically on certain
+networks.
+
+** DevOps
+
+"There is a mental shift from ownership of the domain to offering a
+service to customers." This is something we're still really trying
+adopt. It's hard to go from owning "releases" to thinking about
+offering a release service to customers.
+
+
+
+* Thoughts / Random Notes
 
 "Enterprise software must be cynical. Cynical software expects bad
 things to happen and is never surprised when they do." I really like
@@ -725,7 +810,9 @@ the idea of "cynical software." My default is often to by optimistic
 (assuming the network will work, assume the API will respond, assume
 the database will be up). A major theme of the book is that in order
 to have stable systems, you have to write code that plans for the
-worst.
+worst. "Cynical software should handle violations of form and
+function, such as badly formed headers or abruptly closed
+connections."
 
 If we design software without thinking about and planning for the
 various failure modes, we'll get unpredictable failure modes. The book
@@ -743,6 +830,140 @@ The book mentions the idea of a [[https://en.wikipedia.org/wiki/Weak_reference][
 concept before but it seems like it could be very useful. It seems
 especially useful in the situation when we might be storing a session
 or other caching scenarios.
+
+Software engineering and development is more than just adding
+features. We have to have software that doesn't crash, lose data,
+violate privacy, etc.
+
+In an incident, restoring service has to take priority over doing an
+investigation. E.g. it might make more sense to "just restart" if
+there is a chance it would bring back a system. We can do
+investigation later.
+
+Launching a new system can be like having a newborn. You can't sleep
+because it wakes you up at night. I like that concept. In the early
+phases of a new system, stuff is going to go wrong and wake you up.
+
+Avoid using HTTP client libraries that try to map directly to
+objects. Treat responses as raw data until we've confirmed it meets
+expectations.
+
+~TIME_WAIT~ is a delay period before a socket can be reused. It's
+apparently to prevent [[https://en.wikipedia.org/wiki/Bogon_filtering][Bogons]].
+
+"Do the simplest thing that will work." Is an XP idea that I hadn't
+heard in a while. [[http://wiki.c2.com/?DoTheSimplestThingThatCouldPossiblyWork][More info]].
+
+Recovery-Oriented Computing:
+- Failures are inevitable, in both hardware and software.
+- Modeling and analysis can never be sufficiently complete. A priori
+  prediction of all failure modes is not possible.
+- Human action is a major source of system failures
+
+Layers of concern:
+- Operations: Security, availability, capacity, status, communication
+- Control Plane: System monitoring, deployment, anomaly detection, features
+- Interconnect: Routing, load balancing, failover, traffic management
+- Instances: Service, processes, components, instance monitoring,
+- Hardware, VMs, IP addresses, physical network
+
+"Only make production builds on a CI server, and have it put the
+binary into a safe repository that nobody can write into."
+
+"If your organization treats load balancers as "those things over
+there" that some other team manages, then you might even think about
+implementing a layer of software load balancing under your control,
+entirely behind the hardware load balancers in the network"
+
+Things to log and monitor:
+- Traffic indicators: Page requests, page requests total, transaction
+  counts, concurrent sessions
+- Business transaction, for each type: Number processed, number
+  aborted, dollar value, transaction aging, conversion rate,
+  completion rate.
+- Users: Demographics or classification, technographics, percentage of
+  users who are registered, number of users, usage patterns, errors
+  encountered, successful logins, unsuccessful logins
+- Resource pool health: Enable state, total resources, resources
+  checked out, high water mark, number of resources created, number of
+  resource destroyed, number of times checked out, number of threads
+  blocked waiting for a resource, number of times a thread has blocked
+  waiting.
+- Database connection health: Number of SQL Exceptions thrown, number
+  of queries, average response time to queries
+- Data consumption: Number of entities or rows present, footprint in
+  memory and on disk
+- Integration point health: State of circuit breaker, number of
+  timeouts, number of requests, average response time, number of good
+  responses, number of network errors, number of protocol errors,
+  number of application errors, actual IP address of the remote
+  endpoint, current number of concurrent requests, concurrent request
+  high water mark.
+- Cache health: Items in cache, memory used by cache, cache hit rate,
+  items flushed by garbage collector, configured upper limit, time
+  spend creating items
+
+"In many organizations deployment is ridiculously painful, so it's a
+good place to start making life better."
+
+[[https://tools.ietf.org/html/rfc761#section-2.10][Postel's]] robustness principle, "Be conservative in what you do, be
+liberal in what you accept from others." The robustness principle can
+be articulated for services by talking about what changes are
+acceptable and unacceptable
+
+- Unacceptable
+  - Rejecting a network protocol that previously worked
+  - Rejecting request framing or content encoding that previously worked
+  - Rejecting request syntax that previously worked
+  - Rejecting request routing (whether URL or queue) that previously worked
+  - Adding required fields to the request
+  - Forbidding optional information in the request that was allowed before
+  - Removing information from the response that was previously guaranteed
+  - Requiring an increased level of authorization
+- Acceptable
+  - Require a subset of the previously required parameters
+  - Accept a superset of the previously accepted parameters
+  - Return a superset of the previously returned values
+  - Enforce a subset of the previously required constrained on the parameters
+
+"Thrashing" is an interesting term that came up in reference to pilot
+induced oscilation. When there is a delay between your test/impulse
+and observable behavior it can cause thrashing.
+
+"Paradoxically, the key to making evolutionary architecture work is
+failure. You have to try different approaches to similar problems and
+kill the ones that are less successful." If you two products or
+services and one is working and one is not there are some options we
+can take:
+
+- Keep both services running
+- Take resources from the successful product and make the broken product better
+- Delete the broken product and move the resources somewhere else
+
+I'll often end up doing the 2nd option inadvertently. It's helpful to
+think that if we're evolutionary, we should strongly consider killing
+the broken things.
+
+"No Coordinated Deployments"... "If you ever find that you need to
+update both the provider and caller of a service interface at the same
+time, it's a warning sign that those services are strongly coupled."
+
+The idea behind the two pizza team isn't to have a small group of
+coders, it's to have a completely self-sufficient team that can push
+things all the way to production.
+
+The idea of /Explicit Context/ was useful. One example is to change
+from using an "itemId" that's a number to one that's a full URL that
+could be resolved to find out more information. It's also more
+flexible in scenarios where IDs need to be merged from different
+providers.
+
+Drift: In systems there are three forces: safety, capacity, and
+economy. There is always business pressure to increase economic
+return. People are lazy so there is always pressure to not work at the
+capacity limit. That means the system as a whole will drift toward the
+safety limit. Chaos engineering fits here by stressing the systems so
+there is a force to make things safer.
 
 * Useful Definitions
 
@@ -777,6 +998,28 @@ given workload while maintaining acceptable performance.
 infrastructure and applications rather than directly delivering user
 functionality.
 
+/Service/: A collection of processes across machines that work
+together to deliver a unit of functionality.
+
+/Instance/: An installation on a single machine (container, virtual,
+or physical) out of a load-balanced array of the same executable.
+
+/Executable/: An artifact that a machine can launch as a process and
+created by a build process.
+
+/Process/: An operating system process running on a machine; the
+runtime image of an executable.
+
+/Installation/: The ececutable of any attendant directories,
+configuration files, and other resource as they exist on a machine.
+
+/Deployment/: The act of creatin an installation on a machine.
+
 * Further Reading List
 
 - https://www.osha.gov/dts/osta/otm/otm_iv/otm_iv_4.html#5
+- https://en.wikipedia.org/wiki/Little%27s_law
+- http://roc.cs.berkeley.edu/
+- http://www.openapis.org + http://swagger.io/swagger-ui
+- https://dl.acm.org/citation.cfm?id=361623
+- Drift into Failure - Sidney Dekker
